# robust-llm-2024

./: .codecov.yml  .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  accelerate_config.yaml  pull_request_template.md  pyproject.toml  run_batch_job.py  setup.cfg
.circleci/: config.yml
.github/: CODEOWNERS
.github/workflows/: auto_approve_experiments.yml
cache_csvs/: aibs_ian_103a_gcg_pythia_helpful.csv  aibs_ian_106_gcg_pythia_imdb.csv  aibs_ian_107_gcg_pythia_pm.csv  aibs_ian_108_gcg_pythia_wl.csv  aibs_ian_109_gcg_pythia_spam.csv  aibs_ian_110_rt_pythia_imdb.csv  aibs_ian_111_rt_pythia_pm.csv  aibs_ian_112_rt_pythia_wl.csv  aibs_ian_113_rt_pythia_spam.csv  asr_ian_102a_gcg_pythia_harmless.csv  asr_ian_103a_gcg_pythia_helpful.csv  asr_ian_104a_rt_pythia_harmless.csv  asr_ian_105a_rt_pythia_helpful.csv  asr_ian_106_gcg_pythia_imdb-test.csv  asr_ian_106_gcg_pythia_imdb.csv  asr_ian_107_gcg_pythia_pm.csv  asr_ian_108_gcg_pythia_wl.csv  asr_ian_109_gcg_pythia_spam.csv  asr_ian_110_rt_pythia_imdb.csv  asr_ian_111_rt_pythia_pm.csv  asr_ian_112_rt_pythia_wl.csv  asr_ian_113_rt_pythia_spam.csv  asr_niki_iki_eval_niki_182_gcg.csv  asr_oskar_019a_infix_eval_adv_tr_gcg_imdb_small.csv  asr_oskar_019b_suffix_eval_adv_tr_gcg_imdb_small.csv  asr_oskar_025a_gcg_eval_qwen25_ft_harmless.csv  asr_oskar_025b_gcg_eval_qwen25_ft_spam.csv  asr_tom_005a_eval_niki_149_gcg.csv  asr_tom_006_eval_niki_150_gcg.csv  asr_tom_007_eval_niki_152_gcg.csv  asr_tom_007_eval_niki_152a_gcg.csv  asr_tom_008_eval_niki_152_gcg_infix90.csv  asr_tom_008_eval_niki_152a_gcg_infix90.csv  asr_tom_009_eval_niki_170_gcg.csv  asr_tom_010_eval_niki_170_gcg_infix90.csv  ifs_ian_102a_gcg_pythia_harmless.csv  ifs_ian_103a_gcg_pythia_helpful.csv  ifs_ian_104a_rt_pythia_harmless.csv  ifs_ian_105a_rt_pythia_helpful.csv  ifs_ian_106_gcg_pythia_imdb-test.csv  (+30 more)
cache_csvs/evaluation/: ian_102a_gcg_pythia_harmless.csv  ian_103a_gcg_pythia_helpful.csv  ian_106_gcg_pythia_imdb.csv  ian_107_gcg_pythia_pm.csv  ian_108_gcg_pythia_wl.csv  ian_109_gcg_pythia_spam.csv  ian_142a_gen_strongreject_gcg_qwen25.csv  niki_iki_eval_niki_182_gcg.csv  oskar_019a_infix_eval_adv_tr_gcg_imdb_small.csv  oskar_019b_suffix_eval_adv_tr_gcg_imdb_small.csv  oskar_025a_gcg_eval_qwen25_ft_harmless.csv  oskar_025b_gcg_eval_qwen25_ft_spam.csv  oskar_026a_gcg_eval_qwen25_adv_spam.csv  oskar_026b_gcg_eval_qwen25_adv_harmless.csv  tom_007_eval_niki_152_gcg.csv  tom_008_eval_niki_152_gcg_infix90.csv  tom_011_eval_niki_151_gcg.csv  tom_012_eval_niki_153_gcg.csv  tom_013_eval_niki_171_gcg.csv  tom_014_eval_niki_172_gcg.csv  tom_015_eval_niki_152_gcg_prefix.csv  tom_015_eval_niki_152a_gcg_prefix.csv  tom_016_eval_niki_170_gcg_prefix.csv  tom_019b_beast_eval_pythia_ft_harmless.csv  tom_021b_beast_eval_qwen25_ft_harmless.csv  tom_022b_beast_eval_qwen25_ft_spam.csv  tom_025b_beast_eval_qwen25_adv_gcg_harmless.csv
cache_csvs/training/: niki_149_adv_tr_rt_imdb_small.csv  niki_150_adv_tr_rt_spam_small.csv  niki_151_adv_tr_rt_pm_small.csv  niki_152_adv_tr_gcg_imdb_small.csv  niki_152a_adv_tr_gcg_imdb_small.csv  niki_153_adv_tr_rt_wl_small.csv  niki_158_adv_tr_rt_pm_large.csv  niki_159_adv_tr_rt_wl_large.csv  niki_170_adv_tr_gcg_spam_small.csv  niki_171_adv_tr_gcg_pm_small.csv  niki_172_adv_tr_gcg_wl_small.csv  niki_182_adv_tr_no_ramp_small.csv  oskar_024a_adv_tr_qwen25_gcg_harmless.csv  oskar_024b_adv_tr_qwen25_gcg_spam.csv
examples/gcg/: gcg_example_bert.py  gcg_example_gpt2.py  gcg_example_pythia.py
experiments/: 000_mz_pythia_imdb_train_hps.py  001_mz_pythia_fine_tune_various_scales.py  002_mz_pythia_adv_eval_various_scales.py
experiments/_example/: example_001_Training_pythia_pm_adafactor.py  example_002_Eval_pm_random-token.py  example_003_Eval_imdb_trl-different-adversaries.py  example_004_Eval_pm_random-token_and_gcg.py
experiments/ian/: ian_000b_rt_pythia_pm_parallel.py  ian_001_random_token_tt.py  ian_002_ft_pythia_14m_tt_adafactor.py  ian_003_new_loading_random_token_tt.py  ian_004_ft_tt_mistral_ab_gpt2_small.py  ian_005_ft_tt_mistral_ab_gpt2_medium.py  ian_006_search_based_tt_ab_small_medium.py  ian_007_ft_tt_mistral_cde_gpt2_small_medium.py  ian_008_search_based_tt_cde_small_medium.py  ian_009_ft_imdb_mistral_abcde_gpt2_small_medium.py  ian_010_search_based_imdb_mistral_abcde_gpt2_small_medium.py  ian_011_multiprompt_search_based_tt_pythia_small.py  ian_012_multiprompt_search_based_tt_pythia_small_fewer_its.py  (+146 more)
k8s/: auto-devbox-ian.yaml  auto-devbox-tom.yaml  auto-devbox.yaml  batch_job.yaml  cron_push_models.yaml  devbox.yaml  kaniko-build.yaml
robust_llm/: .adversarial_trainer.py.swp  __init__.py  __main__.py  adversarial_trainer.py  batch_job_utils.py  callbacks.py  configs.py  data_preperation.py  debug.py  debug_utils.py  dist_utils.py  evaluate.py  evaluation.py  evaluation_utils.py  experiment_utils.py  file_utils.py  logging_utils.py  mocks.py  model_utils.py  parsing.py  run_with_profiling.py  scoring_callbacks.py  trainer.py  training.py  utils.py
tests/: conftest.py  run_tests_with_accelerate.py  test_adv_training_state.py  test_adversarial_examples.py  test_attack_determinism.py  test_attack_output.py  test_attack_results.py  test_attack_schedule.py  test_attack_state.py  test_attack_success_rate.py  test_attacks_dont_crash.py  test_autoregressive_gen_attacks_dont_crash.py  test_beam_search.py  test_chat_templates.py  test_contact_info_callback.py  test_dataset_utils.py  test_defense.py  test_defenses_dont_crash.py  test_dist_utils.py  test_dist_utils_cpu.py  test_evaluation.py  test_example_yamls.py  test_flop_counting.py  test_gcg.py  test_gcg_mismatch.py  test_gen_as_clf_attacks_dont_crash.py  test_kv_caching.py  test_language_generators.py  test_lm_attack.py  test_lm_attack_few_shot.py  test_lm_attack_zero_shot.py  test_model_disk_utils.py  test_model_utils.py  test_models_dont_crash.py  test_modifiable_chunk_spec.py  test_password_match.py  test_pipelines_utils.py  test_plotting_utils.py  test_prompt_templates.py  test_push_to_hub.py  (+18 more)
(+2395 files in other folders)
