[project]
name = "robust-llm"
description = "Testing the robustness of LLMs"
requires-python = ">=3.10"
version = "0.0.1"

dependencies = [
    "evaluate==0.4.1",
    "datasets==2.18.0",
    "huggingface_hub==0.23.4",
    "hydra-core==1.3.2",
    "torch==2.2.2",
    "transformers==4.41.2",
    "accelerate==0.29.2",
    # Scipy version >=1.13 is incompatible with TextAttack
    "scipy>=1.12,<1.13.0",
    "tdigest==0.5.2.2",
    "textattack==0.3.10",
    "trl==0.8.3",
    "wandb==0.16.6",
    "semver==3.0.2",
    "detoxify==0.5.2",
]

[project.optional-dependencies]
dev = [
    "black==24.4.0",
    "isort==5.13.2",
    "pre-commit==3.7.1",
    "mypy==1.10.0",
    "pyright==1.1.358",
    # Needed for mypy to type check PyYAML
    "types-PyYAML==6.0.12.20240311",
    "pytest==8.1.1",
    "hypothesis==6.103.2",
    "matplotlib==3.9.0",
    "pandas==2.2.2",
    "seaborn==0.13.2",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "pytest-xdist==3.5.0",
    "autoflake==2.3.1",
    "flake8==7.0.0",
    "flake8-docstrings==1.7.0",
    "flake8-docstrings-complete==1.3.0",
    "tomli==2.0.1",
    "names-generator==0.2.0",
    # For checking GPU memory usage
    "nvidia-ml-py3==7.352.0",
]

# Our models are all in PyTorch, but TextAttack uses TF embeddings for some attacks.
# Install TensorFlow if you want to run those attacks.
tensorflow = [
    "tensorflow==2.16.1",
    "tensorflow_hub==0.16.1",
]

[tool.setuptools.packages.find]
namespaces = false

[tool.isort]
profile = "black"
# Necessary because of directories with
# packages with the same name
known_third_party = ["datasets", "trl", "wandb"]

[tool.pyright]
venvPath = "."
venv = "venv"
include = ["robust_llm"]
pythonVersion = "3.10"

[tool.mypy]
ignore_missing_imports = true
python_version = "3.10"
