[project]
name = "robust-llm"
description = "Testing the robustness of LLMs"
requires-python = ">=3.10"
version = "0.0.1"

dependencies = [
    "evaluate==0.4.1",
    "datasets==2.18.0",
    "huggingface_hub==0.24.7",
    "hydra-core==1.3.2",
    "torch==2.2.2",
    "transformers==4.46.2",
    "accelerate==0.29.2",
    # Scipy version >=1.13 is incompatible with TextAttack.
    # (We don't use TextAttack anymore, but don't want to change versions.)
    "scipy>=1.12,<1.13.0",
    "tdigest==0.5.2.2",
    # v5.0.0 of conllu is not available on PyPI, can remove pin once fixed:
    # https://github.com/EmilStenstrom/conllu/issues/96
    "conllu==4.5.3",
    "wandb==0.18.7",
    "semver==3.0.2",
    "detoxify==0.5.2",
    "openai==1.35.3",
    "pydantic==2.7.4",
    "torchdata==0.8.0",
    "py-spy==0.3.14",
]

[project.optional-dependencies]
dev = [
    "black==24.4.0",
    "isort==5.13.2",
    "pre-commit==3.7.1",
    "mypy==1.10.0",
    "pyright==v1.1.380",
    # Needed for mypy to type check PyYAML
    "types-PyYAML==6.0.12.20240311",
    "pytest==8.1.1",
    "hypothesis==6.103.2",
    "matplotlib==3.9.0",
    "pandas==2.2.2",
    "seaborn==0.13.2",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "pytest-xdist==3.5.0",
    "autoflake==2.3.1",
    "flake8==7.0.0",
    "flake8-docstrings==1.7.0",
    "flake8-docstrings-complete==1.3.0",
    "tomli==2.0.1",
    "names-generator==0.2.0",
    # For checking GPU memory usage
    "nvidia-ml-py3==7.352.0",
    "statsmodels==0.14.2",
]

# Packages to be installed before [cuda] packages.
cuda-deps = [
    # flash_attn needs `packaging`, `wheel`, and `torch` to be pre-installed.
    # https://github.com/Dao-AILab/flash-attention/issues/188
    # https://github.com/Dao-AILab/flash-attention/issues/833#issuecomment-1953111510
    "packaging==24.1",
    "wheel==0.43.0",
]

# Packages that require nvcc to install.
cuda = [
    # Only needed if you set model.attention_implementation=flash_attention_2.
    "flash_attn==2.6.0.post1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
namespaces = false

[tool.isort]
profile = "black"
# Necessary because of directories with
# packages with the same name
known_third_party = ["datasets", "wandb"]

[tool.pyright]
venvPath = "."
venv = "venv"
include = ["robust_llm"]
# We need extraPaths so that pyright works on devboxes.
# A better alternative would be to install the venv in the root of the project.
extraPaths = ["/usr/local/venv/lib/python3.10/site-packages"]
pythonVersion = "3.10"

[tool.mypy]
ignore_missing_imports = true
python_version = "3.10"

[tool.pytest.ini_options]
markers = [
    "multigpu: marks tests that we also want to run with multiple GPUs",
]
